# Final-bachelor-project

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.mac.yml  docker-compose.prod.yml  docker-compose.yml  envoy.yaml  envoy_bidirectional_stream.yaml  flake.nix  rust-toolchain.toml  sqlx-prepare.py
.gitlab/: cargo.yml  clean.yml  common.yml  frontend.yml
.sqlx/: query-00cef426c3b041af4f58b648577d8dbb1de04576da1438b88127438f244eb4f3.json  query-05ddf4cb4adddd1d36f133c08059d8dffec99e7f8f0916b16fbdb3cadf98ce3b.json  query-0b034bd889938b29a2277e694b853eb69d8ac379468f319c793730296c58d460.json  query-0f22f4ec494cccb706621e9a348f6002fca5e44cb5e23058310490ca26bbfd14.json  query-117a9d2083bd27639b880a0829e73b11bbeee189660ec82c1a62e935eb7b6de8.json  query-1349f1c26533aa8771027881485551fd6a7a80d5d5ac3abf9ea392f8e5cf35b5.json  query-173acc843fe2e80657fa7a855f06234c950e2d3f88e4f10f31159fc400171358.json  query-18ab95d9bcfe9cf640e6d962c0216ee77d7555d9e613fa637cc8bf36db41eff6.json  query-1d4cbb2d9364924dfcefd7c5e20b496617c763e4284471e8fd3d4a8155654f14.json  query-26fb5ed0852dafa352695e19105cea114c8ff451b576deaa8b42204938ff2468.json  query-2bf28a9a99785bbb56f1a42aa9d7cbd0c929e5ec723fb123c9324ba1e0d6c76e.json  query-2db3b107827cb259c946528887695ccedbe9c7934ed6eeeeb549375ebd3cc5ed.json  query-2f88d8ec2c2e892402bc732763441ea5a744824fefe2567912993f2d7953f793.json  query-30fd9f33d97069a9fb5ac367b74020ceb29a1bf187f3b07e01fd8dae0783c89c.json  query-318101370cc502e64f524613bfd5412b97f725902c4582e0a485f4374e92428b.json  query-3230327aece12c1d01361fa75aba79c9b3143a1a19cf66d03f9c86520bf5dcbf.json  query-3255b38cb5766ded09a2e243cc1a5d7df41e9c22c23095b5bad30b69c59f8755.json  query-362ababab6aef4d38eebe6c902b7fbb616ed2eb677376d3b517ab6f83cf44161.json  query-379edd8c05d1dfcfb080f6886fcc96768e0ca52709fbe823a2788e6b32d4b8a3.json  query-3c5bc00135145d3598fcaafdc3299b4dbc98b3d224740380cd3c199302a7e1e3.json  (+88 more)
crates/component-library/: Cargo.toml  README.md
crates/component-library/src/: lib.rs
crates/database-config/: Cargo.toml
crates/database-config/examples/: build.rs
crates/database-config/src/: lib.rs
crates/environment-config/: Cargo.toml
crates/environment-config/src/: lib.rs
crates/graph-processing/: Cargo.toml  README.md
crates/graph-processing/src/: lib.rs  message.rs  vertex.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/src/: lib.rs
crates/simulator-communication/: Cargo.toml  README.md
crates/simulator-communication/examples/: simulator.rs
crates/simulator-communication/src/: component.rs  graph.rs  lib.rs  simulator.rs
crates/simulator-utilities/: Cargo.toml
crates/simulator-utilities/src/: lib.rs
sensor-data/crates/parser/: Cargo.toml
sensor-data/crates/parser/src/: error.rs  lib.rs
sensor-data/crates/sensor-store/: Cargo.toml  README.md  build.rs
sensor-data/crates/sensor-store/src/: error.rs  lib.rs  quantity.rs  sensor.rs  signal.rs  unit.rs
sensor-data/crates/validator/: Cargo.toml
sensor-data/crates/validator/src/: lib.rs  util.rs
sensor-data/generator/: Cargo.toml
sensor-data/generator/src/: data_generator.rs  main.rs  sensor_data_generator.rs  sensors.rs  virtual_sensor.rs
sensor-data/generator/src/measurements/: convert.rs  electricity_consumption.rs  mod.rs  read_historic_data.rs  time.rs  utilities.rs  weather.rs
sensor-data/ingestor/: Cargo.toml  build.rs
sensor-data/ingestor/src/: error.rs  ingestor.rs  main.rs  util.rs
sensor-data/transformer/: Cargo.toml  README.md  build.rs
sensor-data/transformer/src/: main.rs
simulation-manager/: Cargo.toml  build.rs
simulation-manager/src/: connector.rs  database.rs  database_buffer.rs  main.rs  manager.rs  runner.rs
simulators/energy-simulator/: Cargo.toml
simulators/energy-simulator/src/: main.rs  messages.rs  solvers.rs  units.rs
simulators/energy-simulator/src/messages/: electric.rs
simulators/energy-simulator/src/nodes/: electric.rs
simulators/energy-simulator/src/nodes/electric/: generator.rs  generic.rs  generic_node.rs  load.rs  slack.rs  transmission.rs  transmission_node.rs
simulators/energy-simulator/src/solvers/: electric_eq_solver.rs  gauss_seidel.rs  optimal_gauss_seidel.rs
simulators/energy-simulator/src/units/: electrical.rs
simulators/energy-simulator/src/units/electrical/: admittance.rs  current.rs  impedance.rs  power.rs  utils.rs  voltage.rs
simulators/energy-supply-and-demand-simulator/: Cargo.toml
simulators/energy-supply-and-demand-simulator/data/: README.md
simulators/energy-supply-and-demand-simulator/notebooks/: energy-consumption-forecasting.ipynb
simulators/energy-supply-and-demand-simulator/src/: main.rs
simulators/load-flow/: Cargo.toml
simulators/load-flow/src/: diagnostics.rs  graph.rs  main.rs  solvers.rs  units.rs  utils.rs
simulators/load-flow/src/diagnostics/: energy_production.rs  total_power.rs
simulators/load-flow/src/graph/: edge.rs  electric_graph.rs  node.rs
simulators/load-flow/src/solvers/: electric.rs  gauss_seidel.rs  newton_raphson.rs  solver.rs
simulators/load-flow/src/units/: admittance.rs  current.rs  impedance.rs  power.rs  voltage.rs
simulators/time-simulator/: Cargo.toml
simulators/time-simulator/src/: main.rs
simulators/weather-simulator/: Cargo.toml
simulators/weather-simulator/src/: main.rs
tools/database-migrator/: Cargo.toml
tools/database-migrator/src/: main.rs
tools/manager-integration-tests/: Cargo.toml
tools/manager-integration-tests/src/: config.rs  database.rs  main.rs  manager_coms.rs  tester.rs
tools/manager-integration-tests/src/config/: dyn_comp.rs  state_helpers.rs
ui-backend/: Cargo.toml  build.rs
ui-backend/src/: auth.rs  error.rs  hashing.rs  jwt.rs  main.rs  proto.rs  sensor.rs  server.rs  simulation_service.rs  twin.rs
ui-backend/src/sensor/: crud.rs  data_fetching.rs  mod.rs
ui-backend/temp-database/: all_twins.json
user-authentication/: Cargo.toml
user-authentication/src/: filehandling.rs  hashing.rs  jwt.rs  main.rs  myerror.rs  server.rs
(+567 files in other folders)
