[workspace]
resolver = "2"
members = [
    "crates/*",
    "sensor-data/crates/parser",
    "sensor-data/crates/validator",
    "sensor-data/crates/sensor-store",
    "sensor-data/generator",
    "sensor-data/ingestor",
    "sensor-data/transformer",
    "simulation-manager",
    "simulators/*",
    "tools/database-migrator",
    "tools/manager-integration-tests",
    "ui-backend",
]

[workspace.dependencies]
# Local crates are added here to avoid having to repeat the entire path.
# These can be imported in your crate usig `<name>.workspace = true`.
component-library = { path = "crates/component-library" }
database-config = { path = "crates/database-config" }
environment-config = { path = "crates/environment-config" }
prost-value = { path = "crates/prost-value" }
proto = { path = "crates/proto" }
predictions = { path = "crates/predictions" }
secrets = { path = "crates/secrets" }
sensor-store = { path = "sensor-data/crates/sensor-store" }
simulator-communication = { path = "crates/simulator-communication" }
simulator-utilities = { path = "crates/simulator-utilities" }
walk-dir-tree = { path = "crates/walk-dir-tree" }

[profile.release-small]
inherits = "release"
lto = true
opt-level = 'z'
