[package]
name = "ui-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
prost = "0.12.3"
prost-types = "0.12.3"
proto = {path = "../crates/proto"}
protobuf = "3.3.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1.36.0", features = ["full"] }
tonic = "0.11.0"
tonic-types = "0.11.0"
tonic-web = "0.11.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.197", features = ["derive"] }


[build-dependencies]
tonic-build = { version = "0.11.0", default-features = false, features = ["prost"] }
