[package]
name = "ui-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
argon2 = "0.5.3"
async-stream = "0.3.5"
chrono = "0.4.34"
dotenvy = "0.15.7"
database-config = { workspace = true }
environment-config = { workspace = true }
jsonwebtoken = "9.2.0"
futures = "0.3.30"
num-bigint = {version = "0.4.4" }
prost = "0.12.3"
prost-types = "0.12.3"
proto = {path = "../crates/proto"}
protobuf = "3.3.0"
regex = "1.10.3"
reqwest = { version = "0.11", features = ["json"] }
sensor-store = {path = "../sensor-data/crates/sensor-store" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.57"
sqlx = { version = "0.7.3", features = ["bigdecimal",
    "chrono",
    "postgres",
    "runtime-tokio",
    "uuid",
    "json"
] }
secrets.workspace = true
tokio = { version = "1.36.0", features = ["full"] }
tonic = "0.11.0"
tonic-types = "0.11.0"
tonic-web = "0.11.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.7.0", features = ["v7", "v4"] }

[build-dependencies]
database-config.workspace = true
tokio = { version = "1.36.0", features = ["macros", "rt"] }
tonic-build = { version = "0.11.0", default-features = false, features = ["prost"] }
