[package]
name = "user-authentication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0"
argon2 = "0.5.3"
chrono = "0.4.34"
dotenvy = "0.15.7"
jsonwebtoken = "9.2.0"
prost = "0.12.3"
prost-types = "0.12.3"
proto = {path = "../crates/proto"}
protobuf = "3.3.0"
serde = "1.0.197"
regex = "1.10.3"
reqwest = { version = "0.11", features = ["json"] }
secrets.workspace = true
serde_json = "1.0"
thiserror = "1.0.15"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] } # enables use of async and await
tonic = "0.11.0" # grpc client/server
tonic-types = "0.11.0"
tonic-web = "0.11.0"

[build-dependencies]
tonic-build = { version = "0.11.0", default-features = false, features = ["prost"] }
