[package]
name = "component-library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simulator-communication-macros = { path = "../simulator-communication-macros" }
simulator-communication = {path = "../simulator-communication"}
