[package]
name = "environment-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Trait to wrap any error in a generic error message.
anyhow = "1.0.80"
# Load environment variables from `.env` file.
dotenvy = "0.15.7"
# Singleton for environment variable hashmap.
once_cell = "1.19.0"
# Provide a single error type for the entire crate.
thiserror = "1.0.57"
