[package]
name = "proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Proto file data format (only needed for expanded tonic macros).
prost = "0.12.3"
prost-types = "0.12.3"
# gRPC service server/router/client.
tonic = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"
