[package]
name = "simulator-communication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost-types = "0.12.3"
proto = { path = "../proto" }
simulator-communication-macros = { path = "../simulator-communication-macros" }
tokio = { version = "1.36.0", features = ["full"] }
tonic = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"
