[package]
name = "simulator-utilities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sensor-store = { workspace = true }
bigdecimal = "0.4.3"
sqlx = { version = "0.7.4", features = [
    "bigdecimal",
] }
# Convert library error types to single custom error type.
thiserror = "1.0.58"
