[package]
name = "energy-simulator"
version = "0.1.0"
edition = "2021"


[dependencies]
component-library.workspace = true
dotenvy = "0.15.7"
graph-processing = { path = "../../crates/graph-processing" }
nalgebra = "0.32.4"
num-complex = "0.4.5"
rand = "0.8"
simulator-communication.workspace = true
tokio = { version = "1.36.0", features = ["rt", "tracing", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
typenum = "1.17.0"
