[package]
name = "load-flow"
version = "0.1.0"
edition = "2021"


[dependencies]
nalgebra = "0.32.4"
num-complex = "0.4.5"
tracing = "0.1.26"
tokio = { version = "1.16.1", features = ["full"] }
tracing-subscriber = "0.3.18"
simulator-communication.workspace = true
component-library.workspace = true

