[package]
name = "time-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
component-library.workspace = true
dotenvy = "0.15.7"
simulator-communication.workspace = true
tokio = { version = "1.36.0", features = ["rt", "tracing", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
