[package]
name = "database-migrator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
dotenvy = "0.15.7"
secrets.workspace = true
serde = { version = "1.0.197", features = ["derive"] }
sqlx = "0.7.4"
tokio = { version = "1.36.0", features = ["rt", "macros"] }
toml = "0.8.11"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
