[package]
name = "manager-integration-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
ctrlc = "3.4.4"
futures = "0.3.30"
prost-types = "0.12.4"
proto.workspace = true
serde = "1.0.198"
sudo = "0.6.0"
testcontainers = "0.15.0"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.15"
toml = "0.8.12"
tonic = "0.11.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.8.0", features = ["std", "v4"] }
