[package]
name = "sensor-data-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Binary JSON format encoding.
bson = "2.9.0"
# CSV format encoding.
csv = "1.3.0"
# Protobuf data format (only needed for expanded tonic macros).
prost = "0.12.3"
prost-types = "0.12.3"
prost-value = { path = "../../../crates/prost-value" }
# Generated rust definition from proto files.
proto = { path = "../../../crates/proto" }
# Easily convert one data encoding to the other.
serde = { version = "1.0.196", features = ["derive"] }
# JSON format encoding.
serde_json = "1.0.113"
# gRPC service server/router/client.
tonic = { version = "0.11.0", default-features = false, features = ["prost"] }
