[package]
name = "sensor-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database-config = { workspace = true }
sqlx = { version = "0.7.4", features = ["postgres", "bigdecimal"] }
thiserror = "1.0.58"
uuid = "1.7.0"

[build-dependencies]
database-config = { workspace = true }
tokio = { version = "1.36.0", default-features = false, features = [
    "macros",
    "rt",
] }
