[package]
name = "sensor-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
# Get database config based on environment variables.
database-config = { workspace = true }
# Operation on enums as if they are sets of values.
enumset = "1.1.3"
# Enables async iterators (can do more :))
futures = "0.3.30"
# Compile-time checked sql queries.
sqlx = { version = "0.7.4", features = [
    "postgres",
    "bigdecimal",
    "uuid",
    "chrono",
] }
# Convert library error types to single custom error type.
thiserror = "1.0.58"
# Universal unique identifier crate.
uuid = "1.7.0"
strum = { version = "0.26", features = ["derive"] }

[build-dependencies]
# Get database config based on environment variables.
database-config = { workspace = true }
# Enables the ues of aysnc. Does so by providing a context in which `Futures`
# can be run to completion.
tokio = { version = "1.36.0", default-features = false, features = [
    "macros",
    "rt",
] }
